--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,8 +25,10 @@ jobs:
 
       - name: Push changes
         env:
-          TARGET_REPO_URL: <target_repository_url>  # Replace with your target repository URL
-          TARGET_REPO_BRANCH: main  # Replace with your target branch name
-          PAT: ${{ secrets.PAT }}  # Use your GitHub PAT secret
+          TARGET_REPO_URL: https://github.com/SachinP/SpringWithSonor.git  # Replace with your target repository URL
         run: |
-            git push https://$PAT@gitHub.com/SachinPereira/SpringWithSonor.git HEAD:master
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add .
+          git commit -m "Automated push by GitHub Actions"
+          git push ${{ secrets.GITHUB_TOKEN }} HEAD:master
